# Middleware

./: README.md
experiment/exp01/: README.md
experiment/exp01/RMIPROJECT/src/client/: Client.java
experiment/exp01/RMIPROJECT/src/data/: Data.java
experiment/exp01/RMIPROJECT/src/server/: DBServer.java  DBmanager.java  DataService.java  ServerService.java
experiment/exp01/mathService/: Makefile.mathService  mathClient  mathServer  mathService.h  mathService.x  mathService_client.c  mathService_clnt.c  mathService_server.c  mathService_svc.c  mathService_xdr.c
experiment/exp02/: README.md
experiment/exp02/CORBACProject/: CMakeLists.txt  DataService.hh  DataServiceSK.cc  ManagerCClient.cpp  ManagerCClient.h  main.cpp
experiment/exp02/CORBAProject/src/: DataService.idl
experiment/exp02/CORBAProject/src/DataService/: DataTransform.java  DataTransformHelper.java  DataTransformHolder.java  DataTransformOperations.java  DataTransformPOA.java  _DataTransformStub.java  _operator.java  _operatorHelper.java  _operatorHolder.java
experiment/exp02/CORBAProject/src/javaClient/: ManagerJClient.java
experiment/exp02/CORBAProject/src/server/: DBManager.java  ManagerServer.java
experiment/exp03/: README.md
experiment/exp03/MessageMW/src/client/: UIClient.form  UIClient.java  UIConnectInfo.form  UIConnectInfo.java
experiment/exp03/MessageMW/src/messageControl/: MessageRec.java  MessageSend.java  MessageTest.java
